Liquid Inflow Does Not Work #74446

Closed
opened 2020-03-04 21:24:44 +01:00 by ronan ducluzeau · 5 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Nvidia Titan black

Blender Version
Broken: master hash a5c4a44d

Short description of error
When Flow object is an Inflow, baking does not produce liquid.
zero Flip particle is created.
It looks like commit to eliminate particles inside obstacle, also eliminates them inside inflow.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Set Quick Liquid effect on default cube.
Change Flow object from Geometry to Inflow.
Bake Domain.

  • no liquid is emitted.

broken_inflow.blend

**System Information** Operating system: Ubuntu 18.04 Graphics card: Nvidia Titan black **Blender Version** Broken: master hash a5c4a44d **Short description of error** When Flow object is an Inflow, baking does not produce liquid. zero Flip particle is created. It looks like commit to eliminate particles inside obstacle, also eliminates them inside inflow. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Set Quick Liquid effect on default cube. Change Flow object from Geometry to Inflow. Bake Domain. - > no liquid is emitted. [broken_inflow.blend](https://archive.blender.org/developer/F8388449/broken_inflow.blend)

Added subscriber: @zeauro

Added subscriber: @zeauro

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @sebbas

Added subscriber: @sebbas

This issue was referenced by 4ccbbd3080

This issue was referenced by 4ccbbd308060f0330472828b317c59e054c9ee7b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-03-05 11:41:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74446
No description provided.