Fix T74446: Liquid Inflow Does Not Work

Somehow this was forgotton in the optimization patch a5c4a44df67e.